@@ -1,5 +1,14 @@
 [1.14.0]
 - [BREAKING CHANGE] Android: Updated minSDK to 21. Multidex config is no longer required, please check https://developer.android.com/build/multidex.
+- API Addition: Added BooleanArray#replaceFirst and BooleanArray#replaceAll
+- API Addition: Added ByteArray#replaceFirst and ByteArray#replaceAll
+- API Addition: Added CharArray#replaceFirst and CharArray#replaceAll
+- API Addition: Added DelayedRemovalArray#replaceFirst and DelayedRemovalArray#replaceAll
+- API Addition: Added FloatArray#replaceFirst and FloatArray#replaceAll
+- API Addition: Added IntArray#replaceFirst and IntArray#replaceAll
+- API Addition: Added LongArray#replaceFirst and LongArray#replaceAll
+- API Addition: Added ShortArray#replaceFirst and ShortArray#replaceAll
+- API Addition: Added SnapshotArray#replaceFirst and SnapshotArray#replaceAll
 
 [1.13.1]
 - [BREAKING CHANGE] Android: Since 1.13.0 libGDX requires setting `android.useAndroidX=true` in your gradle.properties file. In 1.13.1 it is NO longer needed to define the `androidx.core:core` dependency in your Android module.
